Slowly working on more features

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,3 +81,10 @@
 // div{
 //   filter: invert(1);
 // }
+
+
+.fallbackimg{
+  background-image:url('./Addbook/plussign.png');
+   background-size:cover;
+   background-repeat:none;
+}
